--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,21 @@
 body {
-  background-color: #4a4a4a;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .container {
   max-width: 1400px;
 }
 
+.header {
+  z-index: 1;
+  height: 100px;
+  position: absolute;
+  width: 100%;
+  padding: 0;
+  background-color: transparent;
+}
 .header__image {
   width: 120px;
 }
@@ -39,11 +49,18 @@ body {
   text-decoration: none;
 }
 
-.video {
-  position: fixed;
+.video-block {
+  min-height: 100%;
+  min-width: 100%;
+  height: 100%;
+  position: absolute;
   z-index: -1;
-  width: 100%;
-  height: auto;
+}
+.video-block__video {
+  min-height: 100%;
+  min-width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .main-content {
@@ -51,13 +68,105 @@ body {
   padding-top: 170px;
 }
 
-.title {
-  font-size: 30px;
+.title h1 {
+  margin-top: 100px;
+  font-size: 50px;
   color: #fff;
+  letter-spacing: 10px;
 }
 
 .subtitle h2 {
+  margin-top: 30px;
   font-size: 20px;
+  color: #fff;
+}
+
+.home {
+  position: relative;
+}
+
+.button {
+  margin-top: 50px;
+  margin-bottom: 100px;
+  width: 320px;
+  padding: 17px 16px 15px;
+  border-radius: 27.5px;
+  background-color: #56B9EA;
+  border: none;
+  font-size: 18px;
+  font-weight: 500;
+  color: #fff;
+}
+.button:hover {
+  background-color: #2d9eea;
+}
+
+.services {
+  background-color: #fff;
+  padding-bottom: 50px;
+}
+
+.cards {
+  padding: 25px;
+  align-items: flex-start;
+  transition: 0.3s;
+  cursor: pointer;
+}
+.cards__image {
+  width: 70px;
+}
+.cards__software {
+  display: flex;
+  align-items: flex-start;
+}
+.cards__wrapper {
+  margin-left: 20px;
+}
+.cards__title {
+  color: #4a4e57;
+  font-weight: 500;
+  font-size: 20px;
+  text-transform: uppercase;
+}
+.cards__descr {
+  padding-right: 20px;
+  margin-top: 10px;
+  color: #717885;
+}
+.cards:hover {
+  box-shadow: 0px 0px 7px 0px rgba(113, 104, 133, 0.5);
+  text-decoration: none;
+}
+
+.customers__one {
+  text-align: center;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/customers_1.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.customers__two {
+  text-align: center;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/customers_2.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.customers-button {
+  width: 215px;
+  padding: 9px 14px 9px;
+}
+.customers__title {
+  font-size: 37px;
+  text-align: center;
+  color: #4a4e57;
+  font-weight: 500;
+  margin-bottom: 40px;
+}
+.customers__subtitle {
+  margin-top: 100px;
+  color: #fff;
+  font-size: 35px;
+}
+.customers__descr {
   color: #fff;
 }
 
