--- a/css/style.scss
+++ b/css/style.scss
@@ -1,13 +1,23 @@
 body{
-background-color: #4a4a4a;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .container{
   max-width: 1400px;
 
 }
-.header{
+.row{
 
+}
+.header{
+  z-index: 1;
+  height: 100px;
+  position: absolute;
+  width: 100%;
+  padding: 0;
+  background-color: transparent;
   &__image{
     width: 120px;
   }
@@ -39,26 +49,126 @@ background-color: #4a4a4a;
     }
   }
 }
-.video{
-  position: fixed;
+.video-block{
+  min-height: 100%;
+  min-width: 100%;
+  height: 100%;
+  position: absolute;
   z-index: -1;
-  width: 100%;
-  height: auto;
+  &__video{
+    min-height: 100%;
+    min-width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 }
 .main-content{
   text-align: center;
   padding-top: 170px;
 }
-.title{
-  font-size: 30px;
+.title h1{
+  margin-top: 100px;
+  font-size: 50px;
   color: #fff;
+  letter-spacing: 10px;
 }
 .subtitle h2{
+  margin-top: 30px;
   font-size: 20px;
   color: #fff;
 }
-//@media screen and (min-width: 1200px){
-//  .container{
-//    min-width: 1000px;
-//  }
-//}
+.home{
+  position: relative;
+}
+.button{
+  margin-top: 50px;
+  margin-bottom: 100px;
+  width: 320px;
+  padding: 17px 16px 15px;
+  border-radius: 27.5px;
+  background-color: #56B9EA;
+  border: none;
+  font-size: 18px;
+  font-weight: 500;
+  color: #fff;
+  &:hover{
+    background-color: #2d9eea;
+  }
+}
+.container-home__wave-block{
+}
+.services{
+  background-color: #fff;
+  padding-bottom: 50px;
+}
+.cards {
+  //background: url("../img/green-cloud.svg");
+  //background-repeat: no-repeat;
+  padding: 25px;
+  align-items: flex-start;
+  transition: .3s;
+  cursor: pointer;
+  &__image{
+    width: 70px;
+  }
+  &__software {
+    display: flex;
+    align-items: flex-start;
+  }
+  &__wrapper{
+    margin-left: 20px;
+  }
+  &__title{
+    color: #4a4e57;
+    font-weight: 500;
+    font-size: 20px;
+    text-transform: uppercase;
+  }
+  &__descr{
+    padding-right: 20px;
+    margin-top: 10px;
+    color: #717885;
+  }
+  &:hover{
+    box-shadow: 0px 0px 7px 0px rgba(113,104,133,0.5);
+    text-decoration: none;
+  }
+}
+.customers{
+
+  &__one{
+    text-align: center;
+    background-image: linear-gradient(rgba(0,0,0,.6), rgba(0,0,0,.6)), url('../img/customers_1.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+
+  }
+  &__two{
+    text-align: center;
+    background-image: linear-gradient(rgba(0,0,0,.6), rgba(0,0,0,.6)), url('../img/customers_2.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+  &-button{
+    width: 215px;
+    padding: 9px 14px 9px;
+  }
+  &__title{
+
+    font-size: 37px;
+    text-align: center;
+
+    color: #4a4e57;
+    font-weight: 500;
+    margin-bottom: 40px;
+  }
+  &__subtitle{
+    margin-top: 100px;
+    color: #fff;
+    font-size: 35px;
+  }
+  &__descr{
+    color: #fff;
+  }
+
+}
