add contact form

--- a/css/style.scss
+++ b/css/style.scss
@@ -1,9 +1,26 @@
+$main-color: #2A98A3;
+$hover-color: #208191;
+
 body{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+*a:hover{
+  text-decoration: none;
+}
+.hr {
 
+  &__one{
+  width: 200px;
+    border-top: 1px solid rgba(0, 0, 0, 0.5);
+  }
+  &__two{
+    width: 100px;
+    border-top: 1px solid rgba(0, 0, 0, 0.5);
+    margin-bottom: 30px;
+  }
+}
 .container{
   max-width: 1400px;
 
@@ -86,13 +103,13 @@ body{
   width: 320px;
   padding: 17px 16px 15px;
   border-radius: 27.5px;
-  background-color: #56B9EA;
+  background-color: $main-color;
   border: none;
   font-size: 18px;
   font-weight: 500;
   color: #fff;
   &:hover{
-    background-color: #2d9eea;
+    background-color: $hover-color;
   }
 }
 .container-home__wave-block{
@@ -160,7 +177,6 @@ body{
 
     color: #4a4e57;
     font-weight: 500;
-    margin-bottom: 40px;
     letter-spacing: 8px;
   }
   &__subtitle{
@@ -174,17 +190,18 @@ body{
 }
 
 .tech{
-  padding: 50px 0;
+  padding: 50px 100px;
+
   &__title{
     text-align: center;
     font-size: 30px;
     font-weight: 500;
-    margin-bottom: 60px;
     color: #4a4e57;
     letter-spacing: 8px;
   }
   &__card{
     margin-bottom: 40px;
+    padding: 0 30px;
   }
   &-stack {
     display: flex;
@@ -222,4 +239,93 @@ body{
 .showContent .readmore-btn{
   color: #007bff;
   transition: 1s;
+}
+.contacts{
+  background: url(../img/scalet-bg.jpg) center center/cover no-repeat;
+  &__title{
+    font-size: 32px;
+    font-weight: 600;
+    padding-left: 20px;
+    color: #fff;
+    margin-bottom: 20px;
+
+  }
+  &__wrapper{
+    padding: 60px;
+    display: flex;
+  }
+}
+.location {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  & a:hover{
+  color: #fff;
+  }
+  &__title  {
+    color: #fff;
+    margin-left: 20px;
+    font-size: 18px;
+  }
+}
+
+.contacts__main{
+  width: 50%;
+  padding-top: 78px;
+  padding-left: 100px;
+
+
+}
+
+.form__wrapper{
+  border-radius: 6px;
+  background-color: #fff;
+  max-width: 450px;
+}
+.form{
+  width: 50%;
+  &__title{
+    border-bottom: 1px solid $main-color;
+    padding: 15px 20px;
+    font-size: 24px;
+    font-weight: 600;
+    color: #4a4e57
+  }
+
+}
+.feed-form{
+  padding: 0 20px;
+  &__input {
+    margin: 36px 0;
+    padding: 10px 15px;
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+    border-radius: 2px;
+    border: solid 1px $main-color;
+    font-size: 14px;
+    resize: none;
+    background-color: transparent;
+  }
+}
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+  outline: none;
+}
+
+.button-submit{
+  padding: 10px;
+  margin: 0 0 20px 0;
+  width: 100%;
+  border-radius: 2px;
+  border: 1px solid $main-color;
+  background-color: $main-color;
+  font-size: 18px;
+  font-weight: 500;
+  color: #fff;
+  &:hover{
+    background-color: $hover-color;
+  }
 }
