add footer block

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@ body {
   text-decoration: none;
 }
 
+* ul, li {
+  list-style-type: none;
+}
+
 .hr__one {
   width: 200px;
   border-top: 1px solid rgba(0, 0, 0, 0.5);
@@ -20,6 +24,10 @@ body {
 
 .container {
   max-width: 1400px;
+}
+
+.row {
+  margin: 0;
 }
 
 .header {
@@ -154,13 +162,13 @@ body {
 
 .customers__one {
   text-align: center;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/customers_1.jpg");
+  background-image: linear-gradient(rgba(9, 60, 77, 0.6), rgba(9, 60, 77, 0.9)), url("../img/customers_1.jpg");
   background-size: cover;
   background-repeat: no-repeat;
 }
 .customers__two {
   text-align: center;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/customers_2.jpg");
+  background-image: linear-gradient(rgba(9, 60, 77, 0.6), rgba(9, 60, 77, 0.9)), url("../img/customers_2.jpg");
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -188,10 +196,10 @@ body {
   padding: 50px 100px;
 }
 .tech__title {
+  font-size: 37px;
   text-align: center;
-  font-size: 30px;
-  font-weight: 500;
   color: #4a4e57;
+  font-weight: 500;
   letter-spacing: 8px;
 }
 .tech__card {
@@ -281,9 +289,10 @@ body {
 .form__title {
   border-bottom: 1px solid #2A98A3;
   padding: 15px 20px;
-  font-size: 24px;
-  font-weight: 600;
+  font-size: 20px;
   color: #4a4e57;
+  font-weight: 500;
+  letter-spacing: 5px;
 }
 
 .feed-form {
@@ -322,6 +331,64 @@ button:focus {
 }
 .button-submit:hover {
   background-color: #208191;
+}
+
+.footer-block {
+  display: flex;
+  justify-content: space-between;
+  padding: 30px 100px 0 100px;
+}
+
+.list a {
+  font-size: 14px;
+  border-bottom: solid 1px #2A98A3;
+  color: #4a4e57;
+}
+.list a:hover {
+  border-bottom: none;
+}
+.list-title {
+  font-size: 14px;
+  color: #4a4e57;
+  font-weight: 500;
+  letter-spacing: 5px;
+  margin-bottom: 20px;
+}
+.list-item {
+  margin-bottom: 8px;
+}
+
+.footer-title {
+  text-align: center;
+  font-size: 14px;
+  margin: 15px 0;
+}
+
+hr {
+  border-top: solid 1px #2A98A3;
+}
+
+.footer-info__image img {
+  width: 100px;
+}
+.footer-info__title {
+  margin-top: 30px;
+  max-width: 300px;
+  font-size: 14px;
+  color: #4a4e57;
+}
+
+@media (min-aspect-ratio: 16/9) {
+  .video-block {
+    width: 100%;
+    height: auto;
+  }
+}
+@media (max-aspect-ratio: 16/9) {
+  .video-block {
+    width: auto;
+    height: 100%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
